--- a/Module-10/index.html.html
+++ b/Module-10/index.html.html
@@ -136,9 +136,9 @@
                 <ul class="team__list">
                     <li class="guys">
                         <picture>
-                            <source media="min-width: 1024px" srcset="/images/photo1.png, /images/photo1@2.png 2x">
-                            <source srcset="images/photo1.png, images/photo1@2.png 2x">
-                            <img src="images/photo1.png" alt="default" width="380" height="470" />
+                            <source media="min-width: 1024px" srcset="./images/photo1.png, ./images/photo1@2.png 2x">
+                            <source srcset="./images/photo1.png, ./images/photo1@2.png 2x">
+                            <img src="./images/photo1.png" alt="default" width="380" height="470" />
                         </picture>
                         <p class="name">matthew dix</p>
                         <p class="ucupation">Graphic Design</p>
@@ -177,9 +177,9 @@
                     </li>
                     <li class="guys">
                         <picture>
-                            <source media="min-width: 1024px" srcset="/images/photo2.png, /images/photo2@2.png 2x">
-                            <source srcset="images/photo2.png, images/photo2@2.png 2x">
-                            <img src="images/photo2.png" alt="team2" width="380" height="470" />
+                            <source media="min-width: 1024px" srcset="./images/photo2.png, ./images/photo2@2.png 2x">
+                            <source srcset="./images/photo2.png, ./images/photo2@2.png 2x">
+                            <img src="./images/photo2.png" alt="team2" width="380" height="470" />
                         </picture>
                         <p class="name">christopher campbell</p>
                         <p class="ucupation">Branding/UX design</p>
@@ -218,9 +218,9 @@
                     </li>
                     <li class="guys">
                         <picture>
-                            <source media="min-width: 1024px" srcset="/images/photo3.png, /images/photo3@2.png 2x">
-                            <source srcset="images/photo3.png, images/photo3@2.png 2x">
-                            <img src="images/photo3.png" alt="team3" width="380" height="470" />
+                            <source media="min-width: 1024px" srcset="./images/photo3.png, ./images/photo3@2.png 2x">
+                            <source srcset="./images/photo3.png, ./images/photo3@2.png 2x">
+                            <img src="./images/photo3.png" alt="team3" width="380" height="470" />
                         </picture>
                         <p class="name">michael fertig</p>
                         <p class="ucupation">Developer</p>
@@ -265,7 +265,7 @@
         <div class="footer__text wrapper">
             <div class="footer__wrapper">
                 <p class="footer__text">&copy 2016 MoGo free PSD template by <span class="footer__text__decoration">Laaqiq</span></p>
-                <div class="footer__form"><input type="text" value="Your Email..."><button class="button__load button__text">Sunscribe</button></div>
+                <div class="footer__form"><input type="text" placeholder="Your Email..."><button class="button__load button__text">Sunscribe</button></div>
             </div>
     </footer>
 </body>
