--- a/Module-11/src/html/footer.html
+++ b/Module-11/src/html/footer.html
@@ -2,6 +2,6 @@
     <div class="footer__text wrapper">
         <div class="footer__wrapper">
             <p class="footer__text">&copy 2016 MoGo free PSD template by <span class="footer__text__decoration">Laaqiq</span></p>
-            <div class="footer__form"><input type="text" value="Your Email..."><button class="button__load button__text">Sunscribe</button></div>
+            <div class="footer__form"><input type="text" placeholder="Your Email..."><button class="button__load button__text">Sunscribe</button></div>
         </div>
 </footer>
